Initial commit
Update project to use react-native 0.55.4. Dependencies and settings
should be compatible with re-natal 0.9.0.

Update iOS build to work with Xcode 10.0 and iOS 12